# kvax

./: .flake8  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  benchmarks.py  kvax_error.md  pyproject.toml  test_clean_api.py  test_clean_api_simple.py
examples/: clean_api_example.py
kvax/: __init__.py
kvax/ops/: __init__.py  flash_attention_clean.py  flash_attention_triton.py  mask_creator.py  ring_attention_sketch.py
kvax/utils/: __init__.py  benchmarking.py  specs.py  typing.py
tests/: test_attention.py
