[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvax"
version = "0.1.1"
description = "Kvax: Fast and easy-to-use Flash Attention implementation for JAX"
readme = "README.md"
authors = [
    { name = "Sergei Skvortsov", email = "sergeyskv@nebius.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "chex>=0.1.85",
  "jax>=0.4.34",
  "jax-triton>=0.2.0",
  "triton>=3.1",
]

[project.urls]
Homepage = "https://github.com/nebius/kvax"
Issues = "https://github.com/nebius/kvax/issues"

[tool.setuptools]
packages = ["kvax", "kvax.ops", "kvax.utils"]


[project.optional-dependencies]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=6.0",
  "click>=8.1.3",
]
